--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ li{
     /* border: 1px solid black; */
     text-align: center;
     /* border-radius: 73px; */
-    height: 37px;
+    height: 3px;
     width: 174px;
     padding-left: 25px;
     margin-left: 183px;
@@ -135,12 +135,12 @@ header h1{
 /*background: url('images/iven.jpg');*/
 
 .mySlides{
-    width: 39vw;
-    height: 57vh;
-    padding: 0.4px;
+     width: 36vw;
+    height: 50vh;
+    padding: .4px;
     border-radius: 0px;
-    margin-left: 183px;
-    /* padding-top: 1px; */
+    margin-right: -377px;
+    margin-top: 107px;
     border-radius: 8px;
     background: #fff none repeat scroll 0 0;
     display: inline;
