--- a/style.css
+++ b/style.css
@@ -8,415 +8,217 @@ body{
 
 
 }
-/*#F5FFFA*/
-.container{
-     background-color: #16a085;
-    height: 30%;
-    width: 100vw;
-    position: absolute;
-    /* margin-left: 77px; */
-    float: right;
-}
-/*#778899*/
-.second-wall {
-    background-color: #34495e;
-    background-size: cover;
-    height: 36vh;
-    width: 100vw;
-    position: relative;
-
-
-}
-
-
-#r-text{
-width: 0px;
-float: right;
-color: white;
- padding: 0% 35% 0% 0%;
-
-}
-
-.second_wall h2{
- padding: 0% 35% 0% 0%;
-}
-
-.Rouge_one{
-    background-color:#16a085 ;
-    height: 36vh;
-    width: 100vw;
-
-}
-
-.Rouge_one h4{
-  float: left;
-}
-
-h2{
-    font-size: 47px;
-    font-weight: 300;
-    float: right;
-    /* margin-right: 246px; */
-    /* color: white; */
-    /* margin-bottom: 4px; */
-    font-family: 'Ubuntu', sans-serif;
-}
-
-
-.container p{
-      width: 37vw;
-    /* height: 131px; */
-    font-size: 27px;
-    margin: 0px 0px -65px 206px;
-    /* padding-top: 346px; */
-    color: white;
-    margin-top: 13vh;
-    float: right;
-    padding-left: 143px;
-    font-family: 'Poiret One', cursive;
-}
-/*#E1332D;*/
-.Rouge_one{
-    background-color: #1abc9c;
-    height: 36vh;
-    width: 100vw;
-
-}
-
-
-
-ul{
-float: right;
-    /* margin-left: -1vw; */
-    margin-right: 228px;
-}
-
-li{
-      list-style: none;
-    padding-top: 2px;
-    /* border: 1px solid black; */
-    /* border-radius: 73px; */
-    /* height: 17px; */
-    /* width: 73px; */
-    /* padding-left: 0px; */
-    margin-left: 25px;
-}
-/*#5F9EA0*/
-.third_wall{
-    background-color:  #bdc3c7;
-    background-size: cover;
-    /* padding-left: 0vw; */
-    height: 200px;
-    position: relative;
-}
-
-
-header{
-  background-color:;
-  opacity: 0.6;
-  height: 9vh;
-  width: 95%;
-  margin: 2px;
-  position: absolute;
-}
-
-header h1{
-     width: 60%;
-    position: absolute;
-    font-size: 8vh;
-    margin: 100px 40px 0px 166px;
-    color: #000000;
-    font-family: 'Poiret One', cursive;
-    font-family: 'Rajdhani', sans-serif;
-}
-
-
-#w-text {
-   width: 0px;
-    float: right;
-    color: white;
-    padding: 0% 47% 0% 1%;
-}
-
-#background-img{
-  width: 28vw;
-    height: 38vh;
-}
-
-/*background: url('images/iven.jpg');*/
-
-
-
-.mySlides {
-    width: 30vw;
-    height: 34vh;
-    /* padding: .4px; */
-    border-radius: 0px;
-       margin-right: -497px;
-    margin-top: 4px;
-    border-radius: 5px;
-    /* background: #fff none repeat scroll 0 0; */
-    display: inline;
-    /* float: left; */
-    /* text-align: center; */
-    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(171, 0, 0, 0.19);
-    float: right;
-}
-
-.pic{
-  width: 50px;
-  height: 50px;
-  border-radius: 45px;
-  margin-top: 5px;
-  margin-left:80px;
-}
-
-section{
-  text-align: center;
-}
-
-
-#footer{
-height: 100px;
-width: 100%;
-position: absolute;
-bottom: 0;
-}
-
-.icons{
-  list-style: none;
-  text-align: center;
-}
-
-#footer{
-  background-color: ;
-  text-align:center;
-  text-decoration: none;
-}
-
-#fot{
-    text-align:center;
-    font-size:10px;
-    color: white;
-}
-
-
-@media screen and (max-width: 768px) {
-    h1{
-        font-size:30px;
-    }
-}
-
-/*clock CSS*/
-
-p {
-  height: 50px;
-  float: right;
-  margin-right: 0.3em;
-}
-b {
-  float: right;
-  overflow: hidden;
-  position: relative;
-  height: 250px;
-}
-
-span1{
-  display: inline-block;
-  color: #e74c3c;
-  position: relative;
-  white-space: nowrap;
-  top: 0;
-  left: 0;
-  animation: move 15s;
-  animation-iteration-count: infinite;
-animation-delay: 1s;
-}
-
-@keyframes move {
-0%  { top: 0px; }
-20% { top: -50px; }
-40% { top: -100px; }
-60% { top: -150px; }
-80% { top: -400px; }
-}
-
-.sidenav {
-    height: 100%;
-    width: 100vw;
-    position: fixed;
-    z-index: 8;
-    top: 0;
-    left: 0;
-    background-color: #eceeeb;
-    overflow-x: hidden;
-    transition: 3s;
-    padding-top: 30px;
-    float: right;
-}
-
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s
-}
-
-.sidenav a:hover, .offcanvas a:focus{
-    color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-right: 50px;
-}
-
-#main {
-    transition: margin-right .5s;
-    padding: 16px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 0px;}
-  .sidenav a {font-size: 18px;}
-}
-
-
-span h1{
-  color: white;
-}
-
-.openbtn{
-    float: right;
-    margin: 64px -39%
-
-
-}
-
-.third_wall ul{
-  margin-left: 5%;
-
-
-}
-input .user{
-    overflow: visible;
-    margin-left: 145px;
-    margin-top: 58px;
-}
-
-input{
-    width: 343px;
-    /* text-align: center; */
-    height: 35px;
-    padding: 5px;
-    /* overflow: visible; */
-    margin-left: 176px;
-    margin-top: 49px;
-    border-radius: 5px;
-    float: right;
-    margin-right: 136px;
-}
-
-h3{
-  margin-left: 395px;
-  margin-top: -2px;
-  padding-top: 13px
-  color:white;
-}
-
-.usertext{
-    overflow: visible;
-    margin-left: 110px;
-    margin-top: 63px;
-    height: 147px;
-
-}
-.third_wall p{
-    margin: -1px -20px 0px 0px;
-    font-size: 18px;
-    color: black;
-
-}
-button{
-    width: 156px;
-    height: 34px;
-    border: 5px solid black;
-    background-color: initial;
-    border-radius: 3px;
-    float: right;
-    margin-top: 257px;
-    margin-right: -374px;
-}
-
-
-/*Rouge one style*/
-.btn-5 {
-  border: 0 solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-  outline: 1px solid;
-  outline-color: rgba(255, 255, 255, .5);
-  outline-offset: 0px;
-  text-shadow: none;
-  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.btn-5:hover {
-  border: 1px solid;
-  box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
-  outline-color: rgba(255, 255, 255, 0);
-  outline-offset: 15px;
-  text-shadow: 1px 1px 2px #427388;
-}
-
-/*defualt btn*/
-
-
-.btn {
-  color: #fff;
- /* cursor: pointer;*/
-  display: block;
-  font-size:16px;
-  font-weight: 400;
-  line-height: 45px;
-  margin: 0 auto 2em;
-  max-width: 160px;
-  position: relative;
-  text-decoration: none;
-  text-transform: uppercase;
-  vertical-align: middle;
-  width: 100%;
-
-  @media(min-width: 400px) {
-    display: inline-block;
-    margin-right: 2.5em;
-
-    &:nth-of-type(even) {
-      margin-right: 0;
-    }
-  }
-
-  @media(min-width: 600px) {
-
-    &:nth-of-type(even) {
-      margin-right: 2.5em;
-    }
-
-    &:nth-of-type(5) {
-      margin-right: 0;
-    }
-
-  }
-
-  &:hover { text-decoration: none; }
-
-}
-p{
-
-}
 
 /*END OF CLOCK*/
+
+
+body, html {
+  height: 100%;
+  margin: 0;
+  font: 400 15px/1.8 "Lato", sans-serif;
+  color: #777;
+}
+
+.bgimg-1, .bgimg-2, .bgimg-3 {
+  position: relative;
+  opacity: 0.65;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+.bgimg-1 {
+  background-image: url("http://www.twitrcovers.com/wp-content/uploads/2015/07/landmark-bridge-cliff-california-l.jpg");
+  min-height: 100%;
+}
+
+.bgimg-2 {
+  background-image: url("https://images.unsplash.com/photo-1512467367514-6d85b2f76d80?auto=format&fit=crop&w=750&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3Dg");
+  min-height: 400px;
+}
+
+.bgimg-3 {
+  background-image: url("https://graffitiideasly.com/wp-content/uploads/2017/09/background-png-for-picsart-hd-background-nature-special-editing-mobile-world.jpg");
+  min-height: 400px;
+}
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+
+.caption span.border {
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
+
+h3 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 20px "Lato", sans-serif;
+  color: #111;
+}
+
+.wrapper {
+    position: absolute;
+    top: -5%;
+    left: 25%;
+    /* transform: translate(-11%, -62%); */
+
+}
+
+.article{
+    display: block;
+    margin: 25px 355px;
+    padding: 27px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 1px 2px 0px rgba(black,0.05);
+    transition: all 220ms;
+
+  &:hover{
+    box-shadow: 0px 2px 3px 1px rgba(black,0.1);
+    transform : translateY(-5px);
+    transition:all 220ms;
+  }
+
+
+
+}
+
+/* Style the Un-order list by setting its list-style to none */
+.wrapper ul {
+  list-style: none;
+}
+
+img{
+  width:100%;
+}
+
+.wrapper ul li {
+  width: 75px;
+  height: 75px;
+  line-height: 75px;
+  margin: 0 10px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 5px solid #D8E2DC;
+  float: left;
+  transition: all 0.5s ease;
+}
+
+/* Style the icons by setting its color and margin-top value to 20px
+to align it properly */
+.wrapper ul li .fa {
+  color: #D8E2DC;
+  margin-top: 20px;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover.facebook {
+  border: 5px solid #3b5998;
+  box-shadow: 0 0 15px #3b5998;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-facebook {
+  color: #3b5998;
+  text-shadow: 0 0 15px #3b5998;
+  transition: all 0.5s ease;
+}
+
+/*twitter*/
+.wrapper ul li:hover.twitter {
+  border: 5px solid #00aced;
+  box-shadow: 0 0 15px #00aced;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-twitter {
+  color: #00aced;
+  text-shadow: 0 0 15px #00aced;
+  transition: all 0.5s ease;
+}
+
+/* instagram */
+.wrapper ul li:hover.instagram {
+  border: 5px solid #bc2a8d;
+  box-shadow: 0 0 15px #bc2a8d;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-instagram {
+  color: #bc2a8d;
+  text-shadow: 0 0 15px #bc2a8d;
+  transition: all 0.5s ease;
+}
+
+/* google */
+.wrapper ul li:hover.google {
+  border: 5px solid #dd4b39;
+  box-shadow: 0 0 15px #dd4b39;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-google {
+  color: #dd4b39;
+  text-shadow: 0 0 15px #dd4b39;
+  transition: all 0.5s ease;
+}
+
+/* whatsapp */
+.wrapper ul li:hover.whatsapp {
+  border: 5px solid #4dc247;
+  box-shadow: 0 0 15px #4dc247;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-whatsapp {
+  color: #4dc247;
+  text-shadow: 0 0 15px #4dc247;
+  transition: all 0.5s ease;
+}
+
+/* media queries */
+
+@media screen and (max-width: 640px){
+  .wrapper {
+      width: 350px;
+  }
+  .wrapper ul li{
+      margin-top: 10px;
+  }
+  .wrapper ul li.google{
+      margin-left: 60px;
+  }
+}
+
+
+@media screen and (max-width: 340px){
+  .wrapper {
+      width: 150px;
+  }
+  .wrapper ul li{
+      margin:15px;
+  }
+  .wrapper ul li.google{
+      margin-left: 15px;
+  }
+}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+    }
+}
+
