--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ to align it properly */
   .wrapper ul li.google{
       margin-left: 10px;
   }
-  article{
+  .article{
   position: relative;
   opacity: 0.65;
   background-attachment: fixed;
