--- a/style.css
+++ b/style.css
@@ -69,9 +69,10 @@ h3 {
 
 .wrapper {
     position: absolute;
-    top: -5%;
+    top: 10%;
+    /*top was -5%*/
     left: 25%;
-    /* transform: translate(-11%, -62%); */
+     /*transform: translate(-11%, -62%);*/
 
 }
 
@@ -192,7 +193,9 @@ to align it properly */
 
 @media screen and (max-width: 640px){
   .wrapper {
-      width: 350px;
+      /*width: 450px;*/
+      margin-left: -34%;
+
   }
   .wrapper ul li{
       margin-top: 10px;
@@ -202,7 +205,7 @@ to align it properly */
   }
   .article{
   position: relative;
-  opacity: 0.65;
+  /*opacity: 0.65;*/
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
