--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 body{
       background-color: #bdc3c7;
 
-
 }
 
 /*END OF CLOCK*/
@@ -28,14 +27,30 @@ body, html {
   background-size: cover;
 
 }
+
 .bgimg-1 {
   background-image: url("http://www.twitrcovers.com/wp-content/uploads/2015/07/landmark-bridge-cliff-california-l.jpg");
   min-height: 100%;
 }
 
+
 .bgimg-2 {
   background-image: url("https://images.unsplash.com/photo-1512467367514-6d85b2f76d80?auto=format&fit=crop&w=750&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3Dg");
-  min-height: 400px;
+  min-height: 80vh;
+  /*background-color:transparent;*/
+}
+
+.project_imgs{
+
+}
+.bgimg-2 .project_imgs{
+
+   display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+
 }
 
 .bgimg-3 {
@@ -52,12 +67,23 @@ body, html {
   color: #000;
 }
 
+.caption_two {
+  /*position: absolute;*/
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+
 .caption span.border {
-  background-color: #111;
-  color: #fff;
-  padding: 18px;
-  font-size: 25px;
-  letter-spacing: 10px;
+      background-color: #a16e74;
+    color: #fff;
+    padding: 22px;
+    font-size: 38px;
+    letter-spacing: 8px;
+    border-radius: 6px;
+    opacity: 0.80;
 }
 
 h3 {
